# BullsAndCows

./: .gitignore  CMakeLists.txt  index.md
include/: Rules.h  Utils.h
modules/GameGui/: CMakeLists.txt
modules/GameGui/include/: MainWindow.h
modules/GameGui/src/: MainWindow.cpp
modules/GameGui/ui/: MainWindow.ui
modules/bnclib/: CMakeLists.txt
modules/bnclib/include/: Rules.h  Utils.h
modules/bnclib/src/: Rules.cpp  Utils.cpp
src/: Rules.cpp
